# neph.nvim

./: .gitignore  .luacheckrc  .luarc.json  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  TESTING.md  Taskfile.yml  docs.md  flake.nix  package-lock.json  package.json  protocol.json  release-please-config.json  requirements.txt  shell.nix
.copilot/: hooks.json
.cupcake/: rulebook.yml
.fluentci/: ci.ts
.githooks/: pre-push
docs/: architecture.md  docs.md  rpc-protocol.md  testing.md
nix/: hm-module.nix
openspec/: config.yaml
scripts/: build.sh  docgen.lua  run-lua-tests.sh
tests/: agent_submodules_spec.lua  agents_launch_args_spec.lua  agents_spec.lua  api_coverage_spec.lua  api_gate_spec.lua  api_spec.lua  backend_conformance_spec.lua  backend_integration_spec.lua  bus_health_spec.lua  bus_spec.lua  companion_spec.lua  config_boundary_spec.lua  config_spec.lua  context_spec.lua  contract_spec.lua  contracts_spec.lua  file_refresh_spec.lua  fingerprinting_spec.lua  fs_watcher_spec.lua  gate_spec.lua  health_spec.lua  history_spec.lua  input_spec.lua  integration_spec.lua  log_spec.lua  manual_review_spec.lua  minimal_init.lua  picker_spec.lua  placeholder_providers_spec.lua  placeholders_spec.lua  protocol_spec.lua  review_provider_spec.lua  review_queue_spec.lua  review_spec.lua  rpc_spec.lua  session_boundary_spec.lua  session_spec.lua  setup_smoke_spec.lua  (+7 more)
tools/core/: pyproject.toml  shim.py
tools/core/lua/: open.lua  open_diff.lua  preview.lua  revert.lua
tools/core/tests/: conftest.py  test_review_integration.py  test_shim.py
(+707 files in other folders)
