[project]
name = "neph-shim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pynvim>=0.5", "click>=8.0"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pynvim>=0.5",
  "click>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a live Neovim process (set NEPH_INTEGRATION_TESTS=1 to run)",
]
